# OpenAiZChallenge

./: .dockerignore  .env  .env.backup  .env.example  .gitignore  404_ENDPOINT_FIXES_SUMMARY.md  ANALYSIS_MESSAGES_STATE_FIX_SUMMARY.md  ANALYSIS_PAGE_COLORS_AND_BRANDING_FIX_SUMMARY.md  ANALYSIS_PAGE_COMPLETE_REBUILD_SUMMARY.md  ANALYSIS_PAGE_ENDPOINT_INTEGRATION_SUMMARY.md  ANIMATED_CHAT_TESTING_GUIDE.md  API_DOCS.md  API_DOCS_REAL_IKRP.md  BACKEND_INTEGRATION_PLAN.md  BACKEND_README.md  BACKEND_TEST_REPORT.md  BUILDOPS_SILENTSHIFT_001_MISSION_REPORT.md  CHAT_ANIMATION_ENHANCEMENTS_SUMMARY.md  CHAT_POWER_DEMONSTRATION.md  CHAT_SYSTEM_COMPLETE_REVISION_SUMMARY.md  CLEAN_ROOT_NOW.bat  COMPETITION_STRATEGY.md  COMPETITION_SUBMISSION_PLAN.md  COMPREHENSIVE_ANALYSIS_CAPABILITIES_SUMMARY.md  COMPREHENSIVE_STORAGE_INTEGRATION_COMPLETE.md  DAY11_AGENT_COORDINATION_AUTOMATED_DISCOVERY.md  DAY12_GEOSPATIAL_LANDSCAPE_ARCHAEOLOGY.md  DAY13_ADVANCED_INTEGRATION_SYNTHESIS.md  DAY14_FINAL_DEPLOYMENT_COMPLETION.md  DAY3_INTEGRATION_GUIDE.md  DAY3_SIMPLE_SOLUTION.md  DAY3_STORAGE_COMPLETE.md  DAY4_BULLETPROOF_DEPLOYMENT.md  DAY8_KAN_STATUS_INTEGRATION.md  DOCKER_STORAGE_UPDATES.md  Dockerfile  Dockerfile.fallback  Dockerfile.ikrp  Dockerfile.simple  EL_DORADO_SEARCH_ENHANCEMENTS_SUMMARY.md  (+187 more)
api/: agent_integrator.py  analyze.py  api_satellite.py  api_statistics.py  batch.py  enhanced_endpoints.py  lidar_hd_processor.py  main.py  main_old.py  professional_lidar_hd.py  statistics.py  storage_endpoints.py  vision.py  vision_agent_stream.py
backend/: fallback_backend.py  fallback_backend_backup.py  simple_storage_backend.py  test_backend_endpoints.py
config/: Dockerfile.ikrp  Dockerfile.simple  (+4 more)
ikrp/: .env.example  README.md  pyproject.toml  requirements.txt  requirements_compatible.txt
ikrp/config/: .env.example
ikrp/src/: main.py  simple_main.py
ikrp/src/api/: agents.py  auth.py  codex.py  research.py
ikrp/src/core/: config.py  enums.py
ikrp/src/data_processing/: pipeline.py
ikrp/tests/: test_research_api.py
(+936 files in other folders)
