[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
numpy = "^1.24.3"
scipy = "^1.10.1"
rasterio = "^1.3.3"
laspy = "^2.2.0"
sentinelsat = "^1.2.0"
shapely = "^2.0.1"
scikit-image = "^0.20.0"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
logging = "^0.5.1.2"
h5py = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0" 