[tool.poetry]
name = "indigenous-knowledge-research-platform"
version = "0.1.0"
description = "A distributed platform for validating and processing indigenous knowledge"
authors = ["Diego Fuego <diego.fuego@research.org>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
kafka-python = "^2.0.2"
dask = "^2024.1.1"
jwt = "^1.3.1"
httpx = "^0.26.0"
python-multipart = "^0.0.9"
numpy = "^1.26.4"
asyncio = "^3.4.3"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
mypy = "^1.8.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Optional: Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "src/main.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
] 